--- a/index.html
+++ b/index.html
@@ -41,24 +41,13 @@
                <div class="col-md-9">
                   <div class="menu_text">
                      <ul>
-                        <li><a href="index.html">HOME</a></li>
-                        <li><a href="about.html">ABOUT</a></li>
-                        <li><a href="services.html">SERVICES</a></li>
-                        <li><a href="projects.html">PROJECTS</a></li>
-                        <li><a href="contact.html">CONTACT US</a></li>
-                        <li><a href="clients.html">CLIENTS</a></li>
+                        <li><a >HOME</a></li>
+                        <li><a >ABOUT</a></li>
+                        <li><a >SERVICES</a></li>
+                        <li><a >PROJECTS</a></li>
+                        <li><a >CONTACT US</a></li>
+                        <li><a >CLIENTS</a></li>
                         <li><a href="#"><img src="images/search-icon.png"></a></li>
-                        <div id="myNav" class="overlay">
-                           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                           <div class="overlay-content">
-                              <a href="index.html">HOME</a>
-                              <a href="about.html">ABOUT</a>
-                              <a href="services.html">SERVICES</a>
-                              <a href="projects.html">PROJECTS</a>
-                              <a href="contact.html">CONTACT US</a>
-                              <a href="client.html">CLIENTS</a>
-                           </div>
-                        </div>
                         <span  style="font-size:33px;cursor:pointer; color: #ffffff;" onclick="openNav()"><img src="images/toggle.png" class="toggle_menu"></span>
                   </div>
                   </li>
@@ -84,7 +73,6 @@
                               <p class="lorem_text">With our commitment to superior craftsmanship and attention to detail, we offer a diverse range of pens that cater to every individual's unique writing style and preference."
 "Experience the smooth flow of ink, ergonomic designs, and unmatched durability that our pens have to offer, making every stroke a delight.</p>
                               <div class="contact_bt"><a href="#">CONTACT US</a></div>
-                              <div class="get_bt"><a href="#">GET A QUOTE NOW</a></div>
                            </div>
                         </div>
                         <div class="col-sm-5">
@@ -105,7 +93,6 @@
                   <div class="about_taital">
                      <h1 class="about_text">ABOUT US</h1>
                      <p class="long_text">For over 20 years now, our pen manufacturing company has been synonymous with excellence, craftsmanship, and the art of writing. With a proud heritage deeply rooted in the pen industry, we continue to uphold our tradition of creating exquisite writing instruments that captivate and inspire. From our humble beginnings to our present-day success, we have been the trusted partner of businesses worldwide, crafting pens that make a lasting impression. Our pens have graced the desks of CEOs, the hands of professionals, and the hearts of gift recipients, becoming cherished symbols of appreciation, professionalism, and timeless elegance. With our dedicated gifting services, we collaborate closely with businesses to curate personalized pen sets that reflect their brand identity, ensuring that each pen tells a unique story. Embodying the perfect blend of contemporary design and traditional craftsmanship, our pens become an extension of one's personal style and a statement of success. We take immense pride in our heritage, and it is our honor to continue the legacy of producing pens that stand the test of time, allowing generations to rediscover the joy and artistry of writing with our exceptional instruments.</p>
-                     <div class="about_bt"><a href="#">ABOUT MORE</a></div>
                   </div>
                </div>
                <div class="col-md-6 padding_0">
@@ -136,7 +123,6 @@
                   <p class="fact_text"> Whether it's for birthdays, anniversaries, or corporate milestones, our pens become cherished symbols of appreciation and thoughtfulness.</p>
                </div>
                <div class="bt_main">
-                  <div class="seemore_bt"><a href="#">See More</a></div>
                </div>
             </div>
          </div>
@@ -154,6 +140,8 @@
       <!-- client section start -->
       <!-- client section end -->
       <!-- contact section start -->
+      <div class="our_section layout_padding">
+      </div>
       <div class="contact_section">
          <div class="container-fluid">
             <div class="row">
@@ -185,7 +173,7 @@
                </div>
                <div class="col-md-6 padding_0">
                   <div class="map-responsive">
-                     <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France" width="600" height="450" frameborder="0" style="border:0; width: 100%;" allowfullscreen></iframe>
+                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3763.0512512816003!2d72.85143651130703!3d19.410191441319487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7a8d5d133f66d%3A0x482afae8fc5c9fb4!2sN%20J%20Ind%20Estate!5e0!3m2!1sen!2sin!4v1684829761826!5m2!1sen!2sin" width="600" height="450" style="border:0; width: 100%;" allowfullscreen></iframe>
                   </div>
                </div>
             </div>
@@ -207,7 +195,7 @@
                      <div class="map_text"><img src="images/phone-icon.png"><span class="map_icon">( +91 9820146712)</span></div>
                   </div>
                   <div class="col-sm-12 col-lg-4">
-                     <div class="map_text"><img src="images/email-icon.png"><span class="map_icon">protoline.contact@gmail.com</span></div>
+                     <div class="map_text"><img src="images/email-icon.png"><span class="map_icon">contact@protoline.co.in</span></div>
                   </div>
                </div>
                <div class="social_icon">
